package com.nanyin.pattern.factory.abstractFactory;

public class LiNingBrandShoelace implements Shoelace {
    @Override
    public void length() {
        System.out.println("1.5 m");
    }
}
