package com.nanyin.pattern.factory.abstractFactory;

public class NikeBrandShoelace implements Shoelace{
    @Override
    public void length() {
        System.out.println("1 m ");
    }
}
