package com.nanyin.pattern.factory.abstractFactory;
// 鞋带
public interface Shoelace {
    // 长度
    void length();
}
