package com.nanyin.pattern.factory.abstractFactory;
// 鞋底
public interface Sole {
    // 材料
    void getMaterial();
}
